# Ollaic_GaLaGame-Maker

./: .gitignore  CONTEXT.md  README.md  WEBGAL_PRD.zh-CN.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/plans/: character-voice-timbre.md
.github/workflows/: release.yml
design/: README.md  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
design/e2e/: home.spec.ts
design/src/app/: App.tsx  routes.tsx
design/src/app/components/: AiMemoryPanel.tsx  AiMessageBubble.tsx  AiPendingCard.tsx  AiSettingsDialog.tsx  AiStatusCard.tsx  AppSettingsDialog.tsx  AssetManager.tsx  AssetPicker.tsx  CharacterPanel.tsx  DetailPanel.tsx  FlowCanvas.tsx  (+17 more)
design/src/styles/: animations.css  fonts.css  theme.css
design/src/test/: setup.ts
doc/: README.md
doc/ai/: README.md  change-preview.md  conversational-agent.md  media-generation.md  providers.md  sessions-and-memory.md
doc/assets/: README.md  asset-library.md  metadata.md  voice-dubbing.md
doc/characters/: README.md  characters-and-sprites.md
doc/editor/: README.md  command-types.md  history-and-snapshots.md  node-editing.md  script-source.md
doc/project/: README.md  project-lifecycle.md  runtime-preview.md  settings.md
doc/scenes/: README.md  relationship-graph.md  scene-management.md
scripts/: download-stitch-screen.mjs  setup-runtime.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ai/: commands.rs  commands_tests.rs  config.rs
src-tauri/src/assets/: commands.rs
src-tauri/src/characters/: commands.rs  types.rs
src-tauri/src/matting/: commands.rs
src-tauri/src/webgal/: commands.rs  mod.rs  parser.rs  project.rs  references.rs  runtime_manager.rs  runtime_server.rs  serializer.rs  types.rs
stitch_exports/: asset-library.html  character-management.html  project-home.html  script-editor-layout-optimized.html  script-editor.html
stitch_exports/full-feature-reference/: asset-library-full.html  flow-chart-full.html  script-editor-full.html
(+30 files in other folders)
