[package]
name = "gal"
version = "0.1.0"
description = "A Tauri desktop shell for the gal editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
genai = "0.5"
futures = "0.3"
futures-util = "0.3"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "fs", "io-util"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
mime_guess = "2"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
